--- a/react-mnssp-ui/package.json
+++ b/react-mnssp-ui/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.9.3",
     "package.json": "^2.0.1",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
